--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,12 @@
 <h2>演讲者：齐俊鑫</h2>
 
 </article></section></slide>
+<slide class="slide"><section class="slide-wrapper"><article>
+<img src="http://p5.qhimg.com/t0196544840a24c37d7.png" style="max-height:800px"/>
+<p><a href="http://www.newstech.jp/?sc=c" target="_blank">http://www.newstech.jp/?sc=c</a></p>
+<p><a href="http://www.activation-nodeplus.com/" target="_blank">http://www.activation-nodeplus.com/</a></p>
+<p><a href="http://threejs.org/" target="_blank">http://threejs.org/</a></p>
+</article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><hgroup>
 <h1>教学大纲</h1>
 
@@ -56,6 +62,7 @@
 <li>RequestAnimationFrame()</li>
 <li>补间动画</li>
 <li>CSS3D动画 Animation</li>
+<li>基于着色器的动画</li>
 </ul>
 </li>
 </ol>
@@ -87,6 +94,7 @@
     <p>几何体 geometry <small>用来勾勒出形状，保存了顶点位置信息</small></p>
     <p>材质 material <small>描述外观，包括色彩、反射、明暗等属性</small></p>
     <p>纹理 <small>使用一个或者多个位图来表示外观信息</small></p>
+    <div id="addTexture">加纹理<div>
 
 </div>
 </article></section></slide>
@@ -140,8 +148,8 @@
 </ul>
 
 </article></section></slide>
-<slide class="demo-1 slide" class="emo-1" data-on-enter=simpleDemo data-on-leave=clearSimple  data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><article>
-<div id="demo-1-container"></div><div class="magic"><div class="magicItem current pagedown"  data-transition=zoomin><article>
+<slide class="slide"   data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><article>
+<div id="demo-1-container"><img src="http://p3.qhimg.com/t01982f783fb3a017b6.png"/></div><div class="magic"><div class="magicItem current pagedown"  data-transition=zoomin><article>
 <div class="magic-wrapper">
 <article>
 <h2><h4>创建渲染器renderer</h4></h2>
@@ -223,6 +231,10 @@ MeshBasicMaterial 、 MeshLambertMaterial 、 MeshPhongMaterial
 </div>
 </article></div></div>
 </article></section></slide>
+<slide class="slide"><section class="slide-wrapper"><article>
+<p style="margin-bottom:30px"><a href="http://codepen.io/qijunxin/pen/kkkkrz?editors=0010" target="_blank">没记住？戳我试试</a></p>
+<p><a href="http://codepen.io/qijunxin/pen/wzWLvr?editors=0010" target="_blank">太简单？都记住了</a></p>
+</article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><hgroup>
 <h1>3D动画</h1>
 
@@ -232,6 +244,7 @@ MeshBasicMaterial 、 MeshLambertMaterial 、 MeshPhongMaterial
 <li>RequestAnimationFrame()</li>
 <li>补间动画</li>
 <li>CSS3D动画 Animation</li>
+<li>基于着色器的动画</li>
 </ul>
 
 </article></section></slide>
@@ -249,379 +262,34 @@ MeshBasicMaterial 、 MeshLambertMaterial 、 MeshPhongMaterial
 <p><h2>补间动画</h2></p>
 <p><small>补间指的是计算一对值中间插入的其它数值的过程。</small></p>
 <p><small>由一个状态切换到另一个状态的一次性简单动画</small></p>
-<pre><code class="javascript">
+<p><pre><code class="javascript">
     new TWEEN.Tween(group.position)
-        .to( {x:2, y:2, z:-3}, duration*1000 )
-        .delay( delayTime*1000 )
+        .to( {x:2, y:2, z:-3}, duration<em>1000 )
+        .delay( delayTime</em>1000 )
         .easing( TWEEN.Easing.Exponential.InOut )
         .repeat( repeatCount )
         .start();
     }
     TweenMax.to(group.position, 
-                duration, 
-                {y:0, ease:Strong.easeInOut, yoyo:true, repeat:repeatCount});
+        duration, 
+        {y:0, ease:Strong.easeInOut, yoyo:true, repeat:repeatCount});</p>
+<p></code></pre>
+<a href="http://codepen.io/qijunxin/pen/qaNzQZ?editors=0010" style="font-size:22px" target="_blank">我要看例子！</a></p>
 
-</code></pre>
-</article></section></slide>
-<slide class="slide" data-on-enter=cowDemo data-on-leave=clearCow  data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><article>
-<div id="cow-demo"></div><div class="magic"><div class="magicItem current pagedown"  class="cow-code"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="javascript">
-Cow.prototype.blink = function(){  
-    TweenMax.to(this.leftEye.scale, .3, {y:0, ease:Strong.easeInOut, yoyo:true, repeat:3});
-
-    TweenMax.to(this.rightEye.scale, .3, {y:0, ease:Strong.easeInOut, yoyo:true, repeat:3});
-
-    TweenMax.to(this.leftIris.scale, .3, {y:0, ease:Strong.easeInOut, yoyo:true, repeat:3});
-    TweenMax.to(this.rightIris.scale, .3, {y:0, ease:Strong.easeInOut, yoyo:true, repeat:3});
-}
-blinkInterval = setInterval(function(){
-  cow.blink();
-}, 4000);
-</code></pre>
-</article>
-</div>
-</article></div>
-<div class="magicItem next pagedown"  class="cow-code"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="javascript">
-var angleLegs = 0;
-function loop(){
-    angleLegs += .2;
-    var sin = Math.sin(angleLegs);
-    var cos = Math.cos(angleLegs);
-
-    renderer.render(scene, camera);
-    cow.threegroup.rotation.y +=0.01;
-
-    cow.leg1.position.z = -40 + cos*10;
-    cow.leg2.position.z = -40 + sin*10;
-    cow.leg3.position.z = 40 + sin*10;
-    cow.leg4.position.z = 40 + cos*10;
-    cow.threegroup.position.y = cos*10;
-    ...
-    requestAnimationFrame(loop);
-}    
-</code></pre>
-</article>
-</div>
-</article></div></div>
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article>
-<h2>CSS3D动画 Animation</h2>
-</article></section></slide>
-<slide class="slide-demo slide" data-on-enter=animateForDemo data-on-leave=cleargreenDemo clas="slide-demo"><section class="slide-wrapper"><article>
-<div id="demo-container">
-    <div id="stop-animate">暂停</div><p></div></p>
+<p><h2>CSS3D动画 Animation</h2>
+<a href="http://codepen.io/qijunxin/pen/pEEbXK?editors=0110" target="_blank" style="margin-top:100px">举个栗子</a></p>
 
 </article></section></slide>
-<slide class="slide"   data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><div class="magic"><div class="magicItem current pagedown" data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="javascript">
-    renderer = new THREE.CSS3DRenderer();
-    renderer.setSize(window.innerWidth,window.innerHeight);
-    document.getElementById('demo-container').appendChild(renderer.domElement);
+<slide class="slide"><section class="slide-wrapper"><article>
+<p><h2>基于着色器的动画</h2>
+<a href="http://codepen.io/qijunxin/pen/ZppOVr?editors=1010" target="_blank" style="margin-top:100px">去看看</a></p>
 
-    for ( var i = 0; i < num; i ++ ) {
-        var element = document.createElement( 'div' );
-        element.className = 'element';
-        element.innerHTML='&lt;i class="fa fa-'+icons[i%40]+'">&lt;/i&gt;';
-
-        var object = new THREE.CSS3DObject( element );
-        object.position.x = Math.random() * 4000 - 2000;
-        object.position.y = Math.random() * 4000 - 2000;
-        object.position.z = Math.random() * 2000 - 2000;
-        group.add( object );
-        objects.push( object );
-    }
-    scene.add(group);
-</code></pre>
-</article>
-</div>
-</article></div>
-<div class="magicItem next pagedown" data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<div>
-    <img class="tuxing" src="./image/tuxing1.png" alt="">
-</div><pre><code class="javascript">
-    var vector = new THREE.Vector3();
-
-    for ( var i = 0, l = objects.length; i < l; i ++ ) {
-
-        var phi = Math.acos( -1 + ( 2 * i ) / l );
-        var theta = Math.sqrt( l * Math.PI ) * phi;
-
-        var object = new THREE.Object3D();
-        object.position.x = 800 * Math.cos( theta ) * Math.sin( phi );
-        object.position.y = 800 * Math.sin( theta ) * Math.sin( phi );
-        object.position.z = 800 * Math.cos( phi );
-
-        vector.copy( object.position ).multiplyScalar( 2 );
-        object.lookAt( vector );
-
-        targets.push( object );
-
-    }
-</code></pre>
-</article>
-</div>
-</article></div>
-<div class="magicItem far-next pagedown" data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="css">
-    .element {
-        width: 100px;
-        height: 100px;
-        line-height: 100px;
-        font-size: 80px;
-        text-align: center;
-        color: #61C3C2;
-        border: 1px solid rgba(0,127,127,.6);
-        animation: blink 1s ease-in infinite;
-    }
-    @keyframes blink{
-        0%{
-            opacity: 0.8;
-        }
-        10%{
-            opacity: 0.2;
-        }
-    }
-</code></pre>
-</article>
-</div>
-</article></div></div></section></slide>
-<slide class="slide" data-on-enter=initStarDemo data-on-leave=clearStarDemo><section class="slide-wrapper"><article>
-<script type="x-shader/x-vertex" id="vertex-shader">
-    attribute float size;
-    attribute float idx;
-    attribute float matid;
-
-    uniform float timeline;
-
-    varying vec4 vColor;
-    varying float vMatid;
-
-    void main() {
-        vec3 color = vec3(1.0,1.0,1.0);
-        vec4 mvPosition = modelViewMatrix * vec4(position, 1.0);
-
-        float alpha = 1.0;
-        float enlarge = .0;
-
-        if(length(mvPosition.xyz) < 400.0) {
-            enlarge = (sin(timeline - idx) * 40.0);
-        } else {
-            enlarge = (sin(timeline - idx) * 10.0);
-        }
-
-
-        if(enlarge < 0.1) {
-            enlarge = .0 - enlarge + 1.0;
-        }
-
-        vColor = vec4(color, alpha);
-        vMatid = matid;
-
-        gl_Position = projectionMatrix * mvPosition;
-        gl_PointSize = 1500.0 / length(mvPosition.xyz) * size + enlarge;
-
-    }
-</script><script type="x-shader/x-fragment" id="fragment-shader">
-    uniform sampler2D texture1;
-    uniform sampler2D texture2;
-    uniform sampler2D texture3;
-    uniform sampler2D texture4;
-    varying vec4 vColor;
-    varying float vMatid;
-
-    void main() {
-        if(vMatid > 3.5) {
-            gl_FragColor = vColor * texture2D(texture4, gl_PointCoord) ;
-        } else if(vMatid > 2.5) {
-            gl_FragColor = vColor * texture2D(texture3, gl_PointCoord) ;
-        } else if(vMatid > 1.5) {
-            gl_FragColor = vColor * texture2D(texture2, gl_PointCoord) ;
-        } else {
-            gl_FragColor = vColor * texture2D(texture1, gl_PointCoord) ;
-        }
-    }
-</script><div id="star-demo"></div><p>基于着色器的动画-双鱼座</p>
 </article></section></slide>
-<slide class="slide"   data-on-build="Slide.magic" data-on-enter="Slide.magic.init"><section class="slide-wrapper"><div class="magic"><div class="magicItem current pagedown" data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="javascript">
-    var cotem = {
-        name: "双鱼座",
-        vertices: [
-            [-28.47, 20.14, 20.134999999999998], [-33.33, 15.280000000000001, 6.945], 
-            [-30, 13.89, 3.1950000000000003], [-25.7, 9.030000000000001, -.41499999999999915], 
-            [-22.92, -1.67, 3.1950000000000003], [-18.61, -23.61, -29.445], 
-            [-12.5, -10.55, -11.255000000000003], [-7.920000000000002, -1.9399999999999995, -21.255000000000003], 
-            [-1.5300000000000011, 6.11, 11.524999999999999], [8.61, 9.580000000000002, -2.2250000000000014], 
-            [11.25, 14.17, 17.085], [10.420000000000002, 14.31, 29.445], 
-            [19.58, 19.45, 6.384999999999998], [16.799999999999997, 18.75, 24.445], 
-            [30, 23.61, -1.115000000000002], [20.549999999999997, 15.700000000000001, 20.975],
-            [13.939999999999998, 13.610000000000001, 20.975]
-        ],
-        materials: [4, 2, 4, 4, 3, 3, 2, 2, 4, 3, 4, 4, 3, 2, 2, 1, 2],
-        sizes: [10, 10, 20, 20, 25, 20, 20, 25, 10, 10, 20, 10, 20, 10, 10, 10, 10]
-    }
-</code></pre>
-</article>
-</div>
-</article></div>
-<div class="magicItem next pagedown" data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="javascript">
-    var vertices = cotem.vertices, 
-        positions = new Float32Array(3 * vertices.length), 
-        singleSizes = new Float32Array(vertices.length), 
-        idxs = new Float32Array(vertices.length), 
-        matids = new Float32Array(vertices.length), 
-        singleSizes = new Float32Array(vertices.length),
-        sizes = cotem.sizes, 
-        materials = cotem.materials;
-    var geometry = new THREE.BufferGeometry();
-    for(var i = 0; i < vertices.length; i++){
-        vertices[i] = (new THREE.Vector3()).fromArray(vertices[i]);
-    }
-    for (var i = 0; i < vertices.length; i++){
-        positions[3 * i] = vertices[i].x;
-        positions[3 * i + 1] = vertices[i].y;
-        positions[3 * i + 2] = vertices[i].z;
-        matids[i] = materials[i];
-        idxs[i] = i;
-        singleSizes[i] = sizes[i];
-        geometry.addAttribute("position", new THREE.BufferAttribute(positions,3));
-        geometry.addAttribute("idx", new THREE.BufferAttribute(idxs,1));
-        geometry.addAttribute("matid", new THREE.BufferAttribute(matids,1));
-        geometry.addAttribute("size", new THREE.BufferAttribute(singleSizes,1)); 
-    }
-</code></pre>
-</article>
-</div>
-</article></div>
-<div class="magicItem far-next pagedown" data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<pre><code class="javascript">
-    var pointMaterial = new THREE.ShaderMaterial({
-        uniforms: {
-            texture1: {
-                type: "t",
-                value: new THREE.TextureLoader().load(starTexture[0])
-            },
-            texture2: {
-                type: "t",
-                value: new THREE.TextureLoader().load(starTexture[1])
-            },
-            texture3: {
-                type: "t",
-                value: new THREE.TextureLoader().load(starTexture[2])
-            },
-            texture4: {
-                type: "t",
-                value: new THREE.TextureLoader().load(starTexture[3])
-            },
-            timeline: {
-                type: "f",
-                value: 0
-            }
-        },
-        vertexShader: document.getElementById("vertex-shader").textContent,
-        fragmentShader: document.getElementById("fragment-shader").textContent,
-        blending: THREE.AdditiveBlending,
-        depthTest: false,
-        transparent: true
-    });
-</code></pre>
-</article>
-</div>
-</article></div>
-<div class="magicItem " data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<div>
-    <pre><code class="javascript">
-    &lt;script type="x-shader/x-vertex" id="vertex-shader">
-        attribute float size;
-        attribute float idx;
-        attribute float matid;
-
-        uniform float timeline;
-
-        varying vec4 vColor;
-        varying float vMatid;
-
-        void main() {
-            vec3 color = vec3(1.0,1.0,1.0);
-            vec4 mvPosition = modelViewMatrix * vec4(position, 1.0);
-
-            float alpha = 1.0;
-            float enlarge = .0;
-
-            if(length(mvPosition.xyz) < 400.0) {
-                enlarge = (sin(timeline - idx) * 40.0);
-            } else {
-                enlarge = (sin(timeline - idx) * 10.0);
-            }
-
-
-            if(enlarge < 0.1) {
-                enlarge = .0 - enlarge + 1.0;
-            }
-
-            vColor = vec4(color, alpha);
-            vMatid = matid;
-
-            gl_Position = projectionMatrix * mvPosition;
-            gl_PointSize = 1500.0 / length(mvPosition.xyz) * size + enlarge;
-
-        }
-    &lt;/script>    
-    </code></pre>
-</div>
-</article>
-</div>
-</article></div>
-<div class="magicItem " data-transition="fade"><article>
-<div class="magic-wrapper">
-<article>
-<div>
-    <pre><code class="javascript">
-    &lt;script type="x-shader/x-fragment" id="fragment-shader">
-        uniform sampler2D texture1;
-        uniform sampler2D texture2;
-        uniform sampler2D texture3;
-        uniform sampler2D texture4;
-        varying vec4 vColor;
-        varying float vMatid;
-
-        void main() {
-            if(vMatid > 3.5) {
-                gl_FragColor = vColor * texture2D(texture4, gl_PointCoord) ;
-            } else if(vMatid > 2.5) {
-                gl_FragColor = vColor * texture2D(texture3, gl_PointCoord) ;
-            } else if(vMatid > 1.5) {
-                gl_FragColor = vColor * texture2D(texture2, gl_PointCoord) ;
-            } else {
-                gl_FragColor = vColor * texture2D(texture1, gl_PointCoord) ;
-            }
-        }
-    &lt;/script>    
-    </code></pre>
-</div>
-</article>
-</div>
-</article></div></div></section></slide>
+<slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
+<h1>Q&amp;A</h1>
+</article></section></slide>
         
 
         <!-- <slide class="slide logoslide dark nobackground">
