加签到反馈二维码

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
         <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
 <h1>WebGL - Three.js 分享</h1>
 <h2>演讲者：齐俊鑫</h2>
-
+<p style="text-align:center;margin-top:100px"><img src="https://p5.ssl.qhimg.com/t012dcf730abf220a50.jpg" width="200" height="200"></p>
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article>
 <img src="http://p5.qhimg.com/t0196544840a24c37d7.png" style="max-height:800px"/>
@@ -288,7 +288,8 @@ MeshBasicMaterial 、 MeshLambertMaterial 、 MeshPhongMaterial
 
 </article></section></slide>
 <slide class="slide"><section class="slide-wrapper"><article class="flexbox vcenter">
-<h1>Q&amp;A</h1>
+<p><h1>Q&amp;A</h1></p>
+<p style="text-align:center;margin-top:100px"><img src="https://p2.ssl.qhimg.com/t01d2ed3ce148204e74.jpg" width="200" height="200"></p>
 </article></section></slide>
         
 
